   "smpi/trace-call-use-absolute-path" can be set to yes.

Model-Checker:
 - Use the included xxHash as an hash implem when C++14 is usable.
 - Option model-checker/hash was removed. This is always activated now.
 - New option smpi/buffering controls the MPI buffering in MC mode.
 - MPI calls now MC_assert() that no MPI_ERR_* code is returned.
   This is useful to check for MPI compliance.

XBT:
 - xbt_mutex_t and xbt_cond_t are now marked as deprecated, a new C interface
   on S4U is already available to replace them by sg_mutex_t and sg_cond_t.

XML:
 - Introduce the <disk> tag as a replacement of the <storage>, <storage_type>,
   and <mount> tags. The rationale is finish to decouple what should be handle
   by SimGrid kernel (i.e., resources and activities) from plugins built in
   user space (e.g., the file system plugin). This new tag currently accepts
   only three attributes (id, read_bw, and write_bw). All the other information
   that was declared with the storage related tags now has to be expressed as
   properties. An example of platform using this new tag is available at
   examples/platforms/hostsè_with_disks.xml

Fixed bugs (FG#.. -> framagit bugs; FG!.. -> framagit merge requests):
 - FG#28: add sg_actor_self (and other wrappers on this_actor methods)
 - FG#29 and FG#33: provide a new C API to mutexes and condition variables
 - FG#30: convert MSG_process_{un}ref to sg_actor_{un}ref
 - FG#31: per-actor data
 - FG#34: SG_BARRIER_SERIAL_THREAD?
 - FG#35: model-checker does not like buster-produced binaries
 - FG!13: MC: complete workaround in the error msg seen on modern systems
 - FG!15: execute_flops now logs compute
 - FG!16: Fix the ns-3 bindings when several flows are simultaneously finishing
 - FG!17: ns-3: unblock the right number of communications + others issues
 - FG!18: Improving the performance of the ns-3 bindings
 - GH#219: Error in the throughput of TCP transfer
 - GH!330: Minor polishing of English: Configuring_Simgrid